# faultybot

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
entities/: Cargo.toml
entities/src/: active_persona.rs  channel_policy.rs  channel_settings.rs  guild_policy.rs  guild_settings.rs  guild_user_settings.rs  lib.rs  member_policy.rs  member_settings.rs  permission.rs  persona.rs  prelude.rs  role_policy.rs  sea_orm_active_enums.rs
macros/: Cargo.toml
macros/src/: lib.rs  resource.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230710_001739_create_permissions.rs  m20230722_210640_create_settings.rs  m20230805_205921_remove_guild_from_role.rs  m20230806_020929_create_personas.rs  m20230808_030829_seed_default_personas.rs  m20230812_185821_permissions_v2.rs  m20230830_031030_gpt_4.rs  m20240705_062830_gpt_4o.rs
nix/: checks.nix  module.nix  packages.nix
src/: database.rs  error.rs  framework.rs  gpt.rs  main.rs  metrics.rs  settings.rs  test_util.rs
src/commands/: feedback.rs  mod.rs  permissions.rs  permissions_v2.rs  persona.rs  settings.rs  suggestion.rs
src/commands/slash_commands/: mod.rs  ping.rs
src/gpt/: chat.rs  mod.rs  persona.rs
src/handler/: mod.rs
src/permissions/: mod.rs  policy.rs  policy_manager.rs  resources.rs
src/permissions/v2/: mod.rs  policy.rs  resource.rs
src/settings/: channel_settings.rs  config.rs  database_source.rs  manager.rs  merge_strategies.rs  mod.rs
src/util/: caching.rs  cascading.rs  cooldowns.rs  mod.rs
src/wizard/: mod.rs
