[package]
name = "faultybot"
version = "0.1.0"
edition = "2021"
description = "Discord bot writen by FaultyMuse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entities", "migration"]

[workspace.dependencies]
sea-orm = "0.12.1"
sea-orm-migration = "0.12.1"

[dependencies]
async-recursion = "1.0.4"
chrono = "0.4.26"
derive_more = "0.99.17"
derivative = "2.2.0"
dotenvy = "0.15.6"
futures = "0.3.28"
humantime = "2.1.0"
metrics = "0.21.0"
metrics-exporter-statsd = "0.5.0"
metrics-util = "0.15.0"
octocrab = "0.28.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
lazy_static = "1.4.0"

# <0.3.17 has a CVE
h2 = "0.3.20"

entities = { path = "entities" }
migration = { path = "migration" }

[dependencies.clap]
version = "4.3.11"
features = [ "derive" ]

[dependencies.config]
version = "0.13.3"
features = [ "yaml" ]

[dependencies.metrics-exporter-prometheus]
version = "0.12.0"
default_features = false
features = [ "http-listener" ]

[dependencies.moka]
version = "0.11.2"
features = [ "future" ]

[dependencies.poise]
#git = "https://github.com/serenity-rs/poise.git"
#branch = "next"
git = "https://github.com/scottbot95/poise.git"
branch = "cd-config-provider"
version = "0.5.5"
#path = "../poise"

[dependencies.openai]
version = "1.0.0-alpha.8"
default_features = false
features = [ "rustls" ]

[dependencies.sea-orm]
workspace = true
features = [ "sqlx-postgres", "runtime-tokio-rustls" ]

[dependencies.tokio]
version = "1.26.0"
features = [ "macros", "signal", "rt-multi-thread" ]

[dependencies.reqwest]
version = "0.11.14"
default-features = false
features = [ "json", "rustls", "rustls-tls", "hyper-rustls", "tokio-rustls" ]

[dev-dependencies]
ctor = "0.2.3"

# Optimize dependencies even in debug build
[profile.dev.package."*"]
opt-level = 2